added delete, update, get and register user and auth apis
